2008-05-05  Maximilien Cuony
    * Commiting the new kernel of FireGPG. _API is now broken, gpgauth is not tested_
    * Double-click on keys' list simulate a click on 'Ok'

2008-04-28  Maximilien Cuony
    * New inline system

2008-04-26  Maximilien Cuony
    *  FS#51

2008-04-23  Maximilien Cuony
    * Inline system almost done. Waiting for new cgpg now.

2008-04-22  Maximilien Cuony
    * More documentation
    * Begging of implemetation of the inline system.

2008-04-21  Maximilien Cuony
    * More documentation

2008-04-20  Maximilien Cuony
    * Reorganisation of cgpgaccess
    * Added coude source documentation.
	* Begging ofxpcom support and stats

2008-04-19  Achraf Cherti
	* beginning the new API (internal API can be used by non-chrome Javascript)
	* writing FireGPG.sign() function of the external API

2008-04-19  Maximilien Cuony
	* FS#18

2008-04-15  Maximilien Cuony
	* Now able to build an xpcom for windows and linux.

2008-04-12  Maximilien Cuony
	* FS#15
	* FS#14 part one.

2008-03-28  Maximilien Cuony
	* 0.4.9 packed, and uploaded to the server !

2008-03-27  Maximilien Cuony
	* Added a multi-signs checks (thanks to jeff.sadowski)

2008-03-21  Maximilien Cuony
	* Fixed a problem with the 'cancel'  button of the key list.
	* Added a way to send encrpyt AND signed file on the gmail interface.
	* Fixed some locales issues.
	* Ass ar and ru locate.
	* Fixed a false text in english ("Please select a valid PGP key before importing")
	* Better output when a decrpyt fail.

2008-02-08  Maximilien Cuony
	* Support more domains for google apps
	* Don't say there are an update of firegpg is the update page information is not accesible.
	* Added bn locate
	* Added a way to filter keys list

2008-01-26  Maximilien Cuony
	* FireFox 3 support.

2008-01-21  Maximilien Cuony
	* 0.4.8 packed, and uploaded to the server !
	* Fix a bug in password.js
	* New locate : Hebrew by Echetz

2008-01-20  Maximilien Cuony
	* Fixed a problem with signs' verification